fix button with svg having extra space

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -51,6 +51,7 @@ a {
 svg.bi {
   width: 1.5rem;
   height: 1.5rem;
+  display: block;
 }
 
 /* navbar styles */
